[package]
name = "weekend-ray-tracer"
description = "A ray tracer inspired by Ray Tracing In One Weekend"
version = "0.1.0"
edition = "2024"
license = "MIT"
categories = ["graphics"]
keywords = ["ray-tracing", "graphics", "computer-graphics"]
readme = "README.md"
repository = "https://github.com/masrtis/weekend-ray-tracer"

[dependencies]
colog = "1.3.0"
enum_dispatch = "0.3.13"
log = "0.4.27"
rand = "0.9.2"
rayon = "1.11.0"
